Fix invisible selection in the pad creation modal

--- a/customize.dist/src/less2/include/icons.less
+++ b/customize.dist/src/less2/include/icons.less
@@ -25,7 +25,7 @@
             word-wrap: break-word;
         }
         &.cp-icons-element-selected {
-            background-color: white;
+            background-color: rgba(0,0,0,0.2);
             color: #666;
         }
         .fa {
